AD related implementation changes to port the association handling functionality to this connector as well